--- a/userguide/config.toml
+++ b/userguide/config.toml
@@ -35,8 +35,7 @@ pygmentsStyle = "tango"
 blog = "/:section/:year/:month/:day/:slug/"
 
 [outputs]
-	home = [ "HTML", "JSON" ]
-	page = [ "HTML" ]
+section = [ "HTML", "RSS", "print"]
 
 ## Configuration for BlackFriday markdown parser: https://github.com/russross/blackfriday
 [blackfriday]
@@ -203,3 +202,6 @@ enable = false
 [params.mermaid]
 enable = true
 theme = "default"
+
+[params.print]
+disable_toc = false
